# chess_client

./: CMakeLists.txt  License
docs/: api文档.md  qml与C++的通信方式.md
src/: CMakeLists.txt  Login.qml  Main.qml  MainPage.qml  appstartup.cpp  appstartup.h  main.cpp
src/DbServer/: CMakeLists.txt  dbserver.cpp  dbserver.h
src/HttpClient/: CMakeLists.txt  httpclient.cpp  httpclient.h  httpservice.cpp  httpservice.h  messagebuilder.cpp  messagebuilder.h  messageparser.cpp  messageparser.h  mockhttpclient.cpp  mockhttpclient.h
src/HttpClient/include/: IHttpClient.h  httpclient.h  httpservice.h  messagebuilder.h  messageparser.h  mockhttpclient.h
src/LoginServer/: CMakeLists.txt  loginserver.cpp  loginserver.h
src/Utils/: CMakeLists.txt  cconfig.cpp  global.h  utils.cpp
src/Utils/include/: cconfig.h  global.h  utils.h
src/WebsocketClient/: CMakeLists.txt  websocketclient.cpp  websocketclient.h
src/qml/: Login.qml  Main.qml  MainPage.qml  MainPageTopNav.qml  Register.qml  qmldir
tests/: CMakeLists.txt
tests/HttpClientTest/: CMakeLists.txt  tst_MessageParser.cpp  tst_httpclienttest.cpp
tests/LoginServerTest/: CMakeLists.txt  tst_tst_loginserver.cpp
tests/WebsocketClientTest/: CMakeLists.txt  tst_websocketclienttest.cpp
